# srb2dbot

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DOCS.md  Dockerfile  HACKING.md  README.md  build.sh  deploy.sh  docker-build.sh  generate_intermission.sh  generate_thumbnails.sh  lmp2png.py  modules.json  modules.json.default  run  secret.json.default  shell.nix  srb2_dbot.sh  srb2dbot@.service  test_intermission.sh  test_pipeline.sh
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
doc/: architecture.html  building.html  commands.html  index.html  tools.html
include/srb2dbot/: bridge.hpp  module.hpp  script.hpp  server.hpp  utils.hpp
scripts/: SRB2DiscordBot-v0.1.34.lua  SRB2DiscordBot-v0.1.35.lua  SRB2DiscordBot-v0.1.40.lua  SRB2DiscordBot-v0.1.45.lua  SRB2DiscordBot-v0.1.46.lua  SRB2DiscordBot-v0.1.47.lua  SRB2DiscordBot-v0.1.48.lua  SRB2DiscordBot.lua  discord_bridge.lua  run_lua_tests.sh  srb2dbot-mini.lua  test_hooks.lua
source/: bridge.cpp  lib.cpp  main.cpp  module.cpp  script.cpp  server.cpp  utils.cpp  version.h.cmake
source/modules/: ban_player_card.cpp  chat_card.cpp  csay_card.cpp  ctf_capture_card.cpp  ctf_drop_card.cpp  ctf_pickup_card.cpp  ctf_return_card.cpp  events_module.cpp  flag_capture_card.cpp  flag_drop_card.cpp  flag_pickup_card.cpp  flag_return_card.cpp  kick_player_card.cpp  player_join_card.cpp  player_module.cpp  player_quit_card.cpp  relay_module.cpp  round_end_card.cpp  round_start_card.cpp  script_module.cpp  server_chat_card.cpp  server_module.cpp  server_start_card.cpp  shutdown_card.cpp  thumbnails_module.cpp  wad_module.cpp
test/: CMakeLists.txt
test/source/: srb2dbot_bridge_e2e.cpp  srb2dbot_test.cpp
